# MidCtrl

./: .gitignore  Cargo.toml  LICENSE  README.md  build.js  update_version
.github/workflows/: release.yml
MidiCtrl.lrplugin/: IPC.lua  Info.lua  Init.lua  Logging.lua  Params.lua  Service.lua  Shutdown.lua  Socket.lua  State.lua  Utils.lua  json.lua  params.json
devices/: x-touch-mini.json
profiles/: default.json  develop-b.json
src/: actions.rs  lib.rs  main.rs  profile.rs  state.rs  utils.rs
src/lightroom/: actions.rs  ipc.rs  mod.rs
src/midi/: controls.rs  device.rs  mod.rs
src/profile/: controls.rs  mod.rs
src/state/: mod.rs  params.rs
