[package]
name = "midi-ctrl"
version = "0.1.0"
edition = "2018"
publish = false
default-run = "midi-ctrl"

[dependencies]
midi-control = "^0.2.0"
midir = "^0.7.0"
log = "^0.4.14"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.67"
serde_with = "^1.10.0"
dirs = "^3.0.2"
flexi_logger = { version = "^0.18.1", features = ["colors"] }
